Bug 79940 - FILEOPEN: DOCX: LO crashes while opening issue file
Summary: FILEOPEN: DOCX: LO crashes while opening issue file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0
Keywords: haveBacktrace
: 80471 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-06-12 11:03 UTC by Vinaya Mandke
Modified: 2014-07-02 20:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Issue File (32.22 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-12 11:04 UTC, Vinaya Mandke
Details
bt (22.04 KB, text/plain)
2014-06-13 22:13 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vinaya Mandke 2014-06-12 11:03:40 UTC
Steps to Reproduce:
1. Open issue File in LO

LO crashes while opening file

Issue::-

PopPageHeaderFooter tries to remove a paragraph which has a bookmark...
Comment 1 Vinaya Mandke 2014-06-12 11:04:17 UTC
Created attachment 100916 [details]
Issue File
Comment 2 Julien Nabet 2014-06-13 22:13:26 UTC
Created attachment 101019 [details]
bt

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Commit Notification 2014-06-26 07:43:10 UTC
Vinaya Mandke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9fbdb02c9a1da28b4dd51b053d39cb254631e535

fdo#79940 LO crashes on opening; tries to remove a para with bookmarks



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Stahl (allotropia) 2014-06-27 19:33:26 UTC
*** Bug 80471 has been marked as a duplicate of this bug. ***
Comment 5 Jorendc 2014-07-02 20:31:42 UTC
Can not reproduce anymore tested using Mac OSX 10.9 with LibreOffice Version: 4.4.0.0.alpha0+
Build ID: 4f90623dba6a211e7b4c9e98def91605627c5072
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-07-02_00:09:26

Kind regards,
Joren