fdo#79940 LO crashes on opening; tries to remove a para with bookmarks

LO crashes while opening the issue file as, DomainMapper_Impl::RemoveLastParagraph
tries to dispose a paragraph which has bookmarks attached.

Added a method SwXParagraph::Impl::hasBookmarks() which will return true if any
bookmarks starts or ends in the current para..
Added a property "ParaHasBookmarks".
Added the issue file in sw/qa/core/data/ooxml/pass/

Change-Id: If5c0aca68c9fbd95f7439126eb761942fb9714c8